--- a/Forecast/app/src/main/res/layout/activity_city.xml
+++ b/Forecast/app/src/main/res/layout/activity_city.xml
@@ -1,12 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#FAFAFA"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:text="city"
+    <ImageView
+        android:background="@drawable/city_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+    <android.support.v7.widget.CardView
+        android:layout_centerInParent="true"
+        android:id="@+id/search_card_view"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:tint="#4285f4"
+                android:id="@+id/search"
+                android:padding="8dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                android:src="@drawable/magnify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/cityName"
+                android:layout_toLeftOf="@id/search"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_vertical"
+                android:hint="@string/search_city"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:background="@android:color/transparent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <FrameLayout
+        android:padding="16dp"
+        android:layout_below="@id/search_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 
 </RelativeLayout>
