--- a/Forecast/app/src/main/res/layout/activity_city.xml
+++ b/Forecast/app/src/main/res/layout/activity_city.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:scaleType="fitXY"
         android:background="@drawable/city_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 
-    <gabyshev.denis.forecast.city.CityViewPager
+    <gabyshev.denis.forecast.city.viewpager.CityViewPager
         android:id="@+id/viewPager"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
