--- a/Forecast/app/src/main/res/layout/activity_city.xml
+++ b/Forecast/app/src/main/res/layout/activity_city.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:background="@drawable/city_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 
     <gabyshev.denis.forecast.city.viewpager.CityViewPager
         android:id="@+id/viewPager"
