--- a/Forecast/app/src/main/res/values/colors.xml
+++ b/Forecast/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#fafafa</color>
     <color name="colorPrimaryDark">#f0f0f0</color>
     <color name="colorAccent">#4285f4</color>
+    <color name="activity_main_text">#fff</color>
+    <color name="activity_main_icon">#fff</color>
 </resources>
