translate weather activity to fragment

--- a/Forecast/app/src/main/res/layout/activity_main.xml
+++ b/Forecast/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gabyshev.denis.forecast.MainActivity">
+    tools:context="gabyshev.denis.forecast.main.MainActivity">
 
     <ImageView
         android:src="@drawable/background_2"
@@ -30,63 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:id="@+id/city_day_hour_container"
-        android:layout_below="@id/menu"
-        android:orientation="vertical"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textColor="@color/activity_main_text"
-            android:id="@+id/cityName"
-            android:fontFamily="sans-serif"
-            android:textStyle="bold"
-            tools:text="YAKUTSK"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textColor="@color/activity_main_text"
-            android:id="@+id/dayHour"
-            tools:text="TUESDAY, 11:35 AM"
-            android:gravity="center_horizontal"
-            android:fontFamily="sans-serif-thin"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
-    <ImageView
-        android:padding="16dp"
-        android:id="@+id/weatherImage"
-        android:layout_below="@id/city_day_hour_container"
-        android:layout_centerHorizontal="true"
-        tools:src="@drawable/d_clear_sky"
-        android:layout_width="160dp"
-        android:layout_height="160dp" />
 
-    <TextView
-        android:id="@+id/temp"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/activity_main_text"
-        tools:text="66 \u2103"
-        android:gravity="center_horizontal"
-        android:fontFamily="sans-serif-light"
-        android:textSize="44sp"
-        android:layout_below="@id/weatherImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_below="@id/temp"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/activity_main_text"
-        tools:text="SUNNY AND RAIN"
-        android:gravity="center_horizontal"
-        android:fontFamily="sans-serif-light"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </RelativeLayout>
