update week fragment

--- a/Forecast/app/src/main/res/layout/activity_main.xml
+++ b/Forecast/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,20 @@
 
 
 
-    <ImageButton
-        android:id="@+id/menu"
-        android:tint="@color/activity_main_icon"
-        android:padding="32dp"
-        android:background="@android:color/transparent"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--<ImageButton-->
+        <!--android:id="@+id/menu"-->
+        <!--android:tint="@color/activity_main_icon"-->
+        <!--android:padding="32dp"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:src="@drawable/menu"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"/>
 
 
 </RelativeLayout>
