--- a/Forecast/app/src/main/res/layout/fragment_city_result_holder.xml
+++ b/Forecast/app/src/main/res/layout/fragment_city_result_holder.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_centerInParent="true"
-    android:id="@+id/search_card_view"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/resultParent"
+    android:background="#FFFFFF"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_marginLeft="16dp">
 
-        <TextView
-            android:id="@+id/cityCountryName"
-            android:layout_centerInParent="true"
-            tools:text="Moscow, RU"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:padding="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+
+    <TextView
+        android:background="@android:color/transparent"
+        android:textColor="#fff"
+        android:id="@+id/cityCountryName"
+        tools:text="Moscow, RU"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</android.support.constraint.ConstraintLayout>
