--- a/Forecast/app/src/main/res/layout/fragment_city_search.xml
+++ b/Forecast/app/src/main/res/layout/fragment_city_search.xml
@@ -1,44 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/content"
+<android.support.constraint.ConstraintLayout android:id="@+id/content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
-        android:layout_centerInParent="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/search_card_view"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="50dp">
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageButton
                 android:tint="#4285f4"
                 android:id="@+id/search"
                 android:padding="8dp"
-                android:layout_alignParentRight="true"
+                app:layout_constraintWidth_default="spread"
+                app:layout_constraintHeight_default="spread"
+                app:layout_constraintLeft_toRightOf="@id/cityName"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
                 android:background="@android:color/transparent"
                 android:src="@drawable/magnify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
             <EditText
                 android:id="@+id/cityName"
-                android:imeOptions="actionSearch"
-                android:maxLines="1"
-                android:inputType="text"
-                android:layout_toLeftOf="@id/search"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
                 android:gravity="center_vertical"
                 android:hint="@string/search_city"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:background="@android:color/transparent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </RelativeLayout>
+                app:layout_constraintWidth_default="spread"
+                app:layout_constraintHeight_default="spread"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/search"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
