--- a/Forecast/app/src/main/res/layout/fragment_main_current.xml
+++ b/Forecast/app/src/main/res/layout/fragment_main_current.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:id="@+id/city_day_hour_container"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/activity_main_text"
-                android:id="@+id/cityName"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold"
-                tools:text="YAKUTSK"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:gravity="center_horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textColor="@color/activity_main_text"
-                android:id="@+id/dayHour"
-                tools:text="TUESDAY, 11:35 AM"
-                android:gravity="center_horizontal"
-                android:fontFamily="sans-serif-thin"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <TextView
+            app:layout_constraintVertical_chainStyle="packed"
+            android:textColor="@color/activity_main_text"
+            android:id="@+id/cityName"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            tools:text="SAN FRANCISCO"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/dayHour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            app:layout_constraintBottom_toTopOf="@id/weatherImage"
+            android:textColor="@color/activity_main_text"
+            android:id="@+id/dayHour"
+            tools:text="TUESDAY, 11:35 AM"
+            android:fontFamily="sans-serif-thin"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@id/cityName"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <ImageView
+            app:layout_constraintTop_toBottomOf="@id/dayHour"
+            app:layout_constraintBottom_toTopOf="@id/temp"
             android:padding="16dp"
             android:id="@+id/weatherImage"
-            android:layout_below="@id/city_day_hour_container"
-            android:layout_centerHorizontal="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             tools:src="@drawable/d_clear_sky"
             android:layout_width="160dp"
             android:layout_height="160dp" />
 
         <TextView
             android:id="@+id/temp"
-            android:layout_centerHorizontal="true"
             android:textColor="@color/activity_main_text"
             tools:text="66 \u2103"
-            android:gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
             android:textSize="44sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/weatherImage"
+            app:layout_constraintBottom_toTopOf="@id/description"
             android:layout_below="@id/weatherImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -58,14 +61,15 @@
         <TextView
             android:id="@+id/description"
             android:layout_below="@id/temp"
-            android:layout_centerHorizontal="true"
             android:textColor="@color/activity_main_text"
             tools:text="SUNNY AND RAIN"
-            android:gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
+            app:layout_constraintTop_toBottomOf="@id/temp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </RelativeLayout>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
