--- a/Forecast/app/src/main/res/layout/fragment_main_week_item.xml
+++ b/Forecast/app/src/main/res/layout/fragment_main_week_item.xml
@@ -1,4 +1,4 @@
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     android:id="@+id/resultParent"
     android:background="#FFFFFF"
     android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -11,35 +11,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/weatherImage"
         android:padding="16dp"
-        android:layout_centerVertical="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/d_clear_sky"
         android:layout_width="64dp"
         android:layout_height="64dp" />
 
     <TextView
         android:id="@+id/dayOfWeek"
-        android:layout_alignParentRight="true"
         android:background="@android:color/transparent"
         android:textColor="#fff"
-        android:layout_toRightOf="@id/weatherImage"
+        app:layout_constraintLeft_toRightOf="@id/weatherImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_centerVertical="true"
         tools:textColor="#000"
         tools:text="Monday"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_marginRight="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
-
-
     <TextView
-        android:layout_alignParentRight="true"
         android:background="@android:color/transparent"
         android:textColor="#fff"
         android:id="@+id/celsius"
@@ -47,7 +46,10 @@
         tools:textColor="#000"
         tools:text="21\u00B0/10\u00B0"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_marginRight="16dp"
+       app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
