--- a/Forecast/app/src/main/res/layout/fragment_main_week.xml
+++ b/Forecast/app/src/main/res/layout/fragment_main_week.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_centerInParent="true"
         android:id="@+id/recyclerView"
         app:layout_constraintTop_toTopOf="parent"
@@ -16,4 +16,4 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
